<resources>
    <string name="app_name">PETBook</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Log In</string>
    <string name="textview">TextView</string>
    <string name="user">user</string>
    <string name="log_in">Log in</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="title_activity_pantalla_prova">PantallaProva</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="eventos">Eventos</string>
    <string name="map">Map</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
</resources>
