<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icono_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/icono_chat2"
            android:title="@string/chats" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/icono_eventos"
            android:title="@string/eventos" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/icono_mapa"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/icono_configuracion"
            android:title="@string/configuraci_n" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/icono_cerrar_sesion"
            android:title="@string/cerrar_sesi_n" />
    </group>


</menu>
